Import of CFEDDE/POE-Component-Cron-0.019 from CPAN.
gitpan-cpan-distribution: POE-Component-Cron
gitpan-cpan-version:      0.019
gitpan-cpan-path:         CFEDDE/POE-Component-Cron-0.019.tar.gz
gitpan-cpan-author:       CFEDDE
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-POE-Component-Cron version 0.17
+POE-Component-Cron version 0.18
 ===============================
 
-A schedule component for POE. 
+A cron like event schedule component for POE. 
 
 INSTALLATION
 
