--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension POE::Component::Cron.
 
+0.019 Sat May  3 00:25:49 MDT 2008
+    - fix #35422: DateTime::Event::Cron not loaded automatically
+
 0.018 Sat Jun  9 20:59:10 MDT 2007
     - Fix bug poointed out by joseki on IRC that prevented argument passing
       to handlers from the schdule from working.
